--- a/src/OrdersService/OrdersService.Api/OrdersService.Api.csproj
+++ b/src/OrdersService/OrdersService.Api/OrdersService.Api.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2"/>
+        <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
@@ -16,6 +17,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Database\Models\" />
     </ItemGroup>
 
 </Project>
