--- a/src/OrdersService/OrdersService.Api/appsettings.json
+++ b/src/OrdersService/OrdersService.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "OrdersDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "OrdersDatabase"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
