--- a/src/OrdersService/OrdersService.Api/appsettings.json
+++ b/src/OrdersService/OrdersService.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "OrdersDatabase": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "OrdersDatabase"
+    "ConnectionString": "mongodb://orders-mongodb:27017/orders-database",
+    "DatabaseName": "orders-database"
   },
   "Logging": {
     "LogLevel": {
