--- a/src/SellersService/SellersService.Api/appsettings.json
+++ b/src/SellersService/SellersService.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Database": {
+    "ConnectionString": "mongodb://sellers-mongodb:27017/sellers-database",
+    "DatabaseName": "sellers-database"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
