--- a/src/OrdersService/OrdersService.Api/appsettings.json
+++ b/src/OrdersService/OrdersService.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "OrdersDatabase": {
+  "Database": {
     "ConnectionString": "mongodb://orders-mongodb:27017/orders-database",
     "DatabaseName": "orders-database"
   },
