--- a/src/SellersService/SellersService.Api/SellersService.Api.csproj
+++ b/src/SellersService/SellersService.Api/SellersService.Api.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
         <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
