--- a/src/SellersService/SellersService.Api/appsettings.json
+++ b/src/SellersService/SellersService.Api/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth": {
+    "SecretKey": "your-secret-key-here-min-32-chars-long"
+  }
 }
