--- a/src/SellersService/SellersService.Api/appsettings.json
+++ b/src/SellersService/SellersService.Api/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AllowedHosts": "*",
   "Auth": {
-    "SecretKey": "your-secret-key-here-min-32-chars-long"
+    "SecretKey": "your-secret-key-here-min-32-chars-long",
+    "TokenLiveTime": "30:00:00"
   }
 }
