[#5] add swagger support for auth, make file for rerun services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@
     environment:
       - MONGO_INITDB_DATABASE=payment-database
 
-  # Mongo Express
+  # Mongo Express, credentials: admin/pass
   orders-mongo-express:
     image: mongo-express:latest
     ports:
