[#8] add crud for products, add default config to provide running a service out of docker containers

--- a/src/OrdersService/OrdersService.Api/appsettings.Development.json
+++ b/src/OrdersService/OrdersService.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "Database": {
+    "ConnectionString": "mongodb://localhost:27017/orders-database",
+    "DatabaseName": "orders-database"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
