--- a/src/PaymentService/PaymentService.Api/appsettings.Development.json
+++ b/src/PaymentService/PaymentService.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "Database": {
+    "ConnectionString": "mongodb://localhost:27019/payment-database",
+    "DatabaseName": "payment-database"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
