[#4] Add Kafka integrations to all services, add users topic handlers and producers

--- a/src/OrdersService/OrdersService.Api/appsettings.Development.json
+++ b/src/OrdersService/OrdersService.Api/appsettings.Development.json
@@ -3,6 +3,12 @@
     "ConnectionString": "mongodb://localhost:27017/orders-database",
     "DatabaseName": "orders-database"
   },
+  "Kafka": {
+    "BootstrapServices": "localhost:9094",
+    "PaymentEventsTopic": "payment-events",
+    "SellerEventsTopic": "seller-events",
+    "OrderEventsTopic": "order-events"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
