--- a/src/PaymentService/PaymentService.Api/appsettings.Development.json
+++ b/src/PaymentService/PaymentService.Api/appsettings.Development.json
@@ -3,6 +3,13 @@
     "ConnectionString": "mongodb://localhost:27019/payment-database",
     "DatabaseName": "payment-database"
   },
+  "Kafka": {
+    "BootstrapServices": "localhost:9094",
+    "PaymentEventsTopic": "payment-events",
+    "SellerEventsTopic": "seller-events",
+    "OrderEventsTopic": "order-events",
+    "UserEventsTopic": "user-events"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
