--- a/src/SellersService/SellersService.Api/appsettings.json
+++ b/src/SellersService/SellersService.Api/appsettings.json
@@ -3,6 +3,13 @@
     "ConnectionString": "mongodb://sellers-mongodb:27017/sellers-database",
     "DatabaseName": "sellers-database"
   },
+  "Kafka": {
+    "BootstrapServices": "kafka:9092",
+    "PaymentEventsTopic": "payment-events",
+    "SellerEventsTopic": "seller-events",
+    "OrderEventsTopic": "order-events",
+    "UserEventsTopic": "user-events"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
