--- a/src/OrdersService/OrdersService.Api/appsettings.json
+++ b/src/OrdersService/OrdersService.Api/appsettings.json
@@ -3,15 +3,22 @@
     "ConnectionString": "mongodb://orders-mongodb:27017/orders-database",
     "DatabaseName": "orders-database"
   },
+  "Kafka": {
+    "BootstrapServices": "kafka:9092",
+    "PaymentEventsTopic": "payment-events",
+    "SellerEventsTopic": "seller-events",
+    "OrderEventsTopic": "order-events",
+    "UserEventsTopic": "user-events"
+  },
+  "Auth": {
+    "SecretKey": "your-secret-key-here-min-32-chars-long",
+    "TokenLiveTime": "30:00:00"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Auth": {
-    "SecretKey": "your-secret-key-here-min-32-chars-long",
-    "TokenLiveTime": "30:00:00"
-  }
+  "AllowedHosts": "*"
 }
