--- a/src/PaymentService/PaymentService.Api/PaymentService.Api.csproj
+++ b/src/PaymentService/PaymentService.Api/PaymentService.Api.csproj
@@ -9,8 +9,12 @@
 
     <ItemGroup>
         <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="KafkaFlow" Version="4.0.0" />
+        <PackageReference Include="KafkaFlow.LogHandler.Console" Version="4.0.0" />
+        <PackageReference Include="KafkaFlow.Microsoft.DependencyInjection" Version="4.0.0" />
+        <PackageReference Include="KafkaFlow.Serializer.JsonCore" Version="4.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
     </ItemGroup>
 
