--- a/src/SellersService/SellersService.Api/SellersService.Api.csproj
+++ b/src/SellersService/SellersService.Api/SellersService.Api.csproj
@@ -14,6 +14,10 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
         <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
+        <PackageReference Include="KafkaFlow" Version="4.0.0" />
+        <PackageReference Include="KafkaFlow.LogHandler.Console" Version="4.0.0" />
+        <PackageReference Include="KafkaFlow.Microsoft.DependencyInjection" Version="4.0.0" />
+        <PackageReference Include="KafkaFlow.Serializer.JsonCore" Version="4.0.0" />
     </ItemGroup>
 
     <ItemGroup>
