--- a/src/SellersService/SellersService.Api/appsettings.Development.json
+++ b/src/SellersService/SellersService.Api/appsettings.Development.json
@@ -3,6 +3,12 @@
     "ConnectionString": "mongodb://localhost:27018/sellers-database",
     "DatabaseName": "sellers-database"
   },
+  "Kafka": {
+    "BootstrapServices": "localhost:9094",
+    "PaymentEventsTopic": "payment-events",
+    "SellerEventsTopic": "seller-events",
+    "OrderEventsTopic": "order-events"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
