--- a/src/OrdersService/OrdersService.Api/appsettings.json
+++ b/src/OrdersService/OrdersService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "ConnectionString": "mongodb://orders-mongodb:27017/orders-database",
+    "ConnectionString": "mongodb://orders-mongodb:27017/?replicaSet=rs0-orders",
     "DatabaseName": "orders-database"
   },
   "Kafka": {
