--- a/src/PaymentService/PaymentService.Api/appsettings.Development.json
+++ b/src/PaymentService/PaymentService.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "ConnectionString": "mongodb://localhost:27019/payment-database",
+    "ConnectionString": "mongodb://localhost:27019/?replicaSet=rs0-payment",
     "DatabaseName": "payment-database"
   },
   "Kafka": {
