--- a/src/PaymentService/PaymentService.Api/appsettings.json
+++ b/src/PaymentService/PaymentService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "ConnectionString": "mongodb://payment-mongodb:27017/payment-database",
+    "ConnectionString": "mongodb://payment-mongodb:27017/?replicaSet=rs0-payment",
     "DatabaseName": "payment-database"
   },
   "Kafka": {
