--- a/src/SellersService/SellersService.Api/appsettings.Development.json
+++ b/src/SellersService/SellersService.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "ConnectionString": "mongodb://localhost:27018/sellers-database",
+    "ConnectionString": "mongodb://localhost:27018/?replicaSet=rs0-sellers",
     "DatabaseName": "sellers-database"
   },
   "Kafka": {
