--- a/src/SellersService/SellersService.Api/appsettings.json
+++ b/src/SellersService/SellersService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "ConnectionString": "mongodb://sellers-mongodb:27017/sellers-database",
+    "ConnectionString": "mongodb://sellers-mongodb:27017/?replicaSet=rs0-sellers",
     "DatabaseName": "sellers-database"
   },
   "Kafka": {
